--- a/lobonito.css/style.css
+++ b/lobonito.css/style.css
@@ -167,7 +167,7 @@ a{
     color: white;
 }
 
-@media only screen and (max-width:354px){
+@media only screen and (max-width:50px){
 
     main{
 
@@ -201,6 +201,7 @@ a{
 
         padding-left: 100px;
         padding-right: 100px;
+        width: 90%:
     }
 
 }
