--- a/lobonito.css/style.css
+++ b/lobonito.css/style.css
@@ -167,7 +167,7 @@ a{
     color: white;
 }
 
-@media only screen and (max-width:500px){
+@media only screen and (max-width:600px){
 
     main{
 
@@ -179,6 +179,7 @@ a{
 
         padding-left: 0px;
         padding-right: 0px;
+        width: 90%:
     }
 
     section{
